[gd_scene load_steps=4 format=3 uid="uid://3v4eios4p8w0"]

[ext_resource type="Script" path="res://scenes/game/particles/fire_ball/fire_ball.gd" id="1_06keu"]
[ext_resource type="Texture2D" uid="uid://b3tcqqgfgnnew" path="res://scenes/game/particles/fire_ball/fire_ball.png" id="2_wfr0t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ebmt"]
radius = 30.0

[node name="FireBall" type="Area2D" groups=["Projectile"]]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_06keu")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_wfr0t")

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, -3, -3, 0, 0, 3, 3, 0)

[node name="BlastHitbox" type="Area2D" parent="."]
modulate = Color(1, 0.137255, 0.133333, 1)
collision_layer = 0
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="BlastHitbox"]
shape = SubResource("CircleShape2D_0ebmt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
